<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item1"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="Home"
        app:showAsAction="ifRoom"
        android:checkableBehavior="single"/>

    <item
        android:id="@+id/action_sobremim"
        android:orderInCategory="100"
        android:title="@string/action_sobremim"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_experiencia"
        android:orderInCategory="100"
        android:title="@string/action_experiencia"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_formacao"
        android:orderInCategory="100"
        android:title="@string/action_formacao"
        app:showAsAction="never" />
</menu>