<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.sobremim2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_experiencia"
        android:name="com.example.sobremim2.ui.gallery.GalleryFragment"
        android:label="@string/menu_experiencia"
        tools:layout="@layout/fragment_experiencia" />

    <fragment
        android:id="@+id/nav_formacao"
        android:name="com.example.sobremim2.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_formacao"
        tools:layout="@layout/fragment_formacao" />
</navigation>